--- a/package.json
+++ b/package.json
@@ -25,11 +25,17 @@
     "@wangeditor/editor": "5.1.1",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "0.27.2",
+    "bpmn-js": "^8.10.0",
+    "bpmn-js-token-simulation": "^0.10.0",
     "classnames": "^2.3.1",
+    "codemirror-editor-vue3": "^2.0.6",
     "core-js": "^3.14.0",
+    "dayjs": "^1.11.10",
     "echarts": "^5.2.2",
     "element-plus": "2.3.9",
+    "lint": "^0.7.0",
     "lodash": "^4.17.21",
+    "min-dash": "^3.5.2",
     "mitt": "^2.1.0",
     "monaco-editor": "^0.25.2",
     "nprogress": "^0.2.0",
@@ -42,12 +48,7 @@
     "vue-i18n": "9.1.9",
     "vue-router": "4.0.11",
     "vxe-table": "4.0.23",
-    "xe-utils": "3.3.0",
-    "bpmn-js": "^8.10.0",
-    "bpmn-js-token-simulation": "^0.10.0",
-    "codemirror-editor-vue3": "^2.0.6",
-    "lint": "^0.7.0",
-    "min-dash": "^3.5.2"
+    "xe-utils": "3.3.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.172",
@@ -55,19 +56,19 @@
     "@types/qs": "^6.9.6",
     "@types/quill": "^2.0.8",
     "@types/sortablejs": "^1.10.6",
-    "@vitejs/plugin-vue": "4.2.3",
-    "@vue/compiler-sfc": "^3.2.37",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "@vitejs/plugin-vue": "4.2.3",
+    "@vue/compiler-sfc": "^3.2.37",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "eslint": "^8.13.0",
     "eslint-plugin-vue": "^8.6.0",
     "less": "^4.1.1",
     "less-loader": "^10.0.0",
-    "sass": "^1.50.1",
     "lint-staged": "^11.0.0",
     "prettier": "^2.6.2",
+    "sass": "^1.50.1",
     "typescript": "^4.6.3",
     "vite": "4.4.8",
     "vite-plugin-html": "^2.1.1",
